Centrado datos tabla contraseñas

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <table class="table table-sm lastsTable">
         <caption class="capTop">Ultimas 5 contraseñas medidas</caption>      
-        <thead>
+        <thead class="text-center">
         <tr>
             <th scope="col">#</th>
             <th scope="col">Contraseña</th>
@@ -36,7 +36,7 @@
             <th scope="col">Complejidad</th>
         </tr>
         </thead>
-        <tbody id="tablaStorage">
+        <tbody id="tablaStorage" class="text-center">
         
         </tbody>
     </table>
