Agregando icono del navBar + algo de estilo

--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
     
     <title>Proyecto 1</title>
   </head>
-  <body onload="cargarTabla()">
-    <nav class="navbar navbar-dark bg-dark">
-      <span class="navbar-brand mb-0 h1 title">PassMeter</span>
+  <body onload="cargarTabla()" >
+    <nav class="navbar navbar-light navColor">
+      <a class="navbar-brand title d-flex" href="index.html">
+        <img src="resources/icon-white.png" width="40" height="40" class="d-inline-block align-top" alt="">
+        <h3 class="title2">PassMeter</h3>
+      </a>
     </nav>
     
     <div class="container">
-      <div class="jumbotron jumbotron-fluid">
+      <div class="jumbotron jumbotron-fluid jumb">
         <div class="container contJumb">
-          <h1 class="display-4">Bienvenido!</h1>
-          <p class="lead">Esta es una aplicación para medir que tan segura es una contraseña</p>
+          <h1 class="display-4 margenes">Bienvenido!</h1>
+          <p class="lead margenes">Esta es una aplicación para medir que tan segura es una contraseña</p>
           <hr class="my-4">
-          <p>La aplicación medirá de acuerdo a ciertos requerimientos que tan compleja es la contraseña y asignará un puntaje de acuerdo a si son buenas o malas prácticas, señalando el puntaje general y la complejidad de la misma. Esto se verá de manera dinámica a medida que el usuario cambie su contraseña como va afectando a su complejidad y puntaje.</p>
-          <a class="btn btn-danger btn-lg" href="./pages/medidor.html" role="button">Nueva Medición</a>
+          <p class="margenes">La aplicación medirá de acuerdo a ciertos requerimientos que tan compleja es la contraseña y asignará un puntaje 
+            de acuerdo a si son buenas o malas prácticas, señalando el puntaje general y la complejidad de la misma. 
+            Esto se verá de manera dinámica a medida que el usuario cambie su contraseña como es que va afectando a su complejidad y puntaje.</p>
+          <a class="btn btn-danger btn-lg margenes" href="./pages/medidor.html" role="button">Nueva Medición</a>
         </div>
       </div>
 
