--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -13,15 +13,18 @@
     <title>Proyecto 1</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark bg-dark">
-      <span class="navbar-brand mb-0 h1 title">PassMeter</span>
-    </nav>
+    <nav class="navbar navbar-light navColor">
+        <a class="navbar-brand title d-flex" href="../index.html">
+          <img src="../resources/icon-white.png" width="40" height="40" class="d-inline-block align-top" alt="">
+          <h3 class="title2">PassMeter</h3>
+        </a>
+      </nav>
     
     <div id='contenedor'>
         <div class="row">
             <div class="col-sm">
                 <div class="card border-danger space">
-                    <div class="card-header bg-dark">
+                    <div class="card-header navColor">
                         <h5 class="card-title text-light">Prueba tu Contraseña</h5>
                     </div>
                     <div class="card-body">
