--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <title>Proyecto 1</title>
   </head>
-  <body onload="cargarTabla()" >
+  <body onload="cargarTablaAndTema()">
+
     <nav class="navbar navbar-light navColor">
       <a class="navbar-brand title d-flex" href="index.html">
         <img src="resources/icon-white.png" width="40" height="40" class="d-inline-block align-top" alt="">
         <h3 class="title2">PassMeter</h3>
       </a>
+      <div class="dropdown">
+        <i class="fa fa-ellipsis-v fa-2x text-light" id="dropdownMenuLink" data-toggle="dropdown"></i>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+          <h6 class="dropdown-header">Cambiar tema</h6>
+          <a class="dropdown-item" href="#" onclick='changeTheme("Rojo")'>Rojo</a>
+          <a class="dropdown-item" href="#" onclick='changeTheme("Azul")'>Azul</a>
+        </div>
+      </div>
     </nav>
     
     <div class="container">
@@ -49,8 +60,9 @@
     </div>
     <!-- JavaScript -->
     <script src="js/app.js"></script>
+    <script src="js/theme.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
