--- a/pages/medidor.html
+++ b/pages/medidor.html
@@ -13,11 +13,19 @@
     <title>Proyecto 1</title>
   </head>
   <body onload='checkThemeMedidor()'>
-    <nav class="navbar navbar-light navColor">
+      <nav class="navbar navbar-light navColor">
         <a class="navbar-brand title d-flex" href="../index.html">
           <img src="../resources/icon-white.png" width="40" height="40" class="d-inline-block align-top" alt="">
           <h3 class="title2">PassMeter</h3>
         </a>
+        <div class="dropdown">
+          <i class="fa fa-ellipsis-v fa-2x text-light" id="dropdownMenuLink" data-toggle="dropdown"></i>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+            <h6 class="dropdown-header">Cambiar tema</h6>
+            <a class="dropdown-item" href="#" onclick='changeThemeMedidor("Rojo")'>Rojo</a>
+            <a class="dropdown-item" href="#" onclick='changeThemeMedidor("Azul")'>Azul</a>
+          </div>
+        </div>
       </nav>
     
     <div id='contenedor'>
